# kicad

3d-viewer/3d_navlib/: nl_3d_viewer_plugin.cpp  nl_3d_viewer_plugin.h
debian/: README.Debian  README.vendorded-stuff  changelog  control  copyright  gbp.conf  kicad-demos.install  kicad-doc-ca.doc-base  kicad-doc-de.doc-base  kicad-doc-en.doc-base  kicad-doc-es.doc-base  kicad-doc-fr.doc-base  kicad-doc-id.doc-base  kicad-doc-it.doc-base  kicad-doc-ja.doc-base  kicad-doc-pl.doc-base  kicad-doc-ru.doc-base  kicad-doc-zh.doc-base  kicad-packages-relations.dia  kicad.NEWS  kicad.install.in  kicad.links  kicad.lintian-overrides  rules  watch
debian/patches/: series
debian/patches/debian-hacks/: KiCadFullVersion-Drop-hyphen-in-the-string.patch
debian/patches/fixes/: Adjusting-content-in-the-desktop-files.patch  demos-Adjust-MIME-encoding-to-UTF8-of-some-libraries.patch  python-Use-raw-strings-expressions.patch
debian/patches/reproducibility/: doc-Add-field-revdate-to-asciidoc-files.patch
debian/source/: lintian-overrides
debian/tests/: control
debian/upstream/: metadata
doc/: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODEOWNERS  Dockerfile  LICENSE.adoc  README.adoc  docs-versioning.adoc
doc/CMakeModules/: AsciidocHelpers.cmake  FindASCIIDOCTOR.cmake  FindASCIIDOCTORPDF.cmake  KiCadDocumentation.cmake
doc/helpers/: multichannel-equivalency.kicad_sch
doc/src/: CMakeLists.txt
doc/src/cli/: CMakeLists.txt  cli.adoc
doc/src/cli/po/: zh.po
doc/src/doc_writing_style_policy/: doc_writing_style_policy.adoc
doc/src/eeschema/: eeschema.adoc  eeschema_actions_reference.adoc  eeschema_advanced.adoc  eeschema_assigning_footprints.adoc  eeschema_design_blocks.adoc  eeschema_generating_outputs.adoc  eeschema_hierarchical_schematics.adoc  eeschema_inspecting_a_schematic.adoc  eeschema_introduction.adoc  eeschema_schematic_creation_and_editing.adoc  eeschema_schematic_to_pcb.adoc  eeschema_simulator.adoc  eeschema_symbols_and_libraries.adoc
doc/src/eeschema/po/: addendum.ja  addendum.ru  addendum.zh  de.po  es.po  fr.po  id.po  it.po  ja.po  pl.po  ru.po  zh.po
doc/src/gerbview/: gerbview.adoc
doc/src/gerbview/po/: addendum.ru  addendum.zh  de.po  es.po  it.po  ja.po  pl.po  ru.po  zh.po
doc/src/getting_started_in_kicad/: getting_started_in_kicad.adoc
doc/src/getting_started_in_kicad/po/: addendum.de  addendum.fr  addendum.it  addendum.ru  ca.po  de.po  es.po  fr.po  id.po  it.po  ja.po  pl.po  ru.po  zh.po
doc/src/introduction/: CMakeLists.txt  introduction.adoc
doc/src/introduction/po/: addendum.de  addendum.it  addendum.zh  de.po  it.po  zh.po
doc/src/kicad/: kicad.adoc  kicad_projmgr_actions_reference.adoc
doc/src/kicad/po/: addendum.de  addendum.fr  addendum.ru  ca.po  de.po  es.po  fr.po  id.po  it.po  ja.po  pl.po  ru.po  zh.po
doc/src/pcb_calculator/: pcb_calculator.adoc
doc/src/pcb_calculator/po/: addendum.ru  addendum.zh  it.po  ja.po  pl.po  ru.po  zh.po
doc/src/pcbnew/: pcbnew.adoc  pcbnew_actions_reference.adoc  pcbnew_advanced.adoc  pcbnew_create_board.adoc  pcbnew_display_and_selection.adoc  pcbnew_editing.adoc  pcbnew_footprints_and_libraries.adoc  pcbnew_generating_outputs.adoc  pcbnew_inspecting.adoc  pcbnew_introduction.adoc
doc/src/pcbnew/po/: addendum.de  addendum.ru  addendum.zh  de.po  es.po  fr.po  it.po  ja.po  pl.po  ru.po  zh.po
doc/src/pl_editor/: pl_editor.adoc
doc/src/pl_editor/po/: addendum.zh  de.po  es.po  fr.po  it.po  ja.po  pl.po  ru.po  zh.po
doc/xsl/: dblatex-pdf-zh.xsl
include/: singleton.h
